# Agentic-AI

./: About_UV.md  README.md  about_project.md  pyproject.toml
Foundation_Agentic_ai/: 1-First_WorkFlow.ipynb  2-Build_ChatBot.ipynb  3-pydantic_Data_Validation.ipynb
celebal/: Untitled2.ipynb
