[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "ipython>=9.3.0",
    "langchain>=0.3.26",
    "openai>=1.92.2",
    "requests>=2.32.4",
    "tensorflow>=2.19.0",
]
